# Snypshark

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analisis/: capa_osi.py  deteccion_anomalias.py  resumen.py
analizador_pcap/: main.py
analizador_pcap/analisis/: capa_osi.py  deteccion_anomalias.py  resumen.py
analyzer/: analyzer.py
analyzer/protocol_handlers/: dns_handler.py  icmp_handler.py  ip_handler.py  tcp_handler.py
analyzer/ui/: menu.py  osi_layers.py
analyzer/utils/: flag_descriptor.py  pattern_matcher.py
docs/: analyzer.rst  conf.py  index.rst  modules.rst
tests/: conftest.py  test_analyzer.py  test_flag_descriptor.py  test_osi_layers.py  test_pattern_matcher.py
